...
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Furniture Name"
            android:textSize="22sp"
            android:textStyle="bold"/>

...
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/place_in_ar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_in_ar"
            android:textSize="16sp"
            android:background="@drawable/round_btn"
            android:textColor="#FFFFFF"
...
